<resources>
    <string name="app_name">pos-android-demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">dspreadDemo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_setting">Setting</string>
    <string name="hint_text_content">Text Content</string>
    <string name="hint_barcode_content">Barcode Content</string>
    <string name="hint_barcode_height">Barcode Height</string>
    <string name="hint_barcode_width">Barcode Width</string>
    <string name="hint_qrcode_content">QRCode Content</string>
    <string name="hint_qrcode_size">QRCode Size</string>
    <string name="hint_font_size">Font Size</string>
    <string name="start_print">Start Print</string>
    <string name="stop_print">Stop Print</string>
    <string name="standard_test">Standard Test</string>
    <string name="text_print">Print Text</string>
    <string name="qrcode_print">Print QR code</string>
    <string name="bitmap_print">Print Pictures</string>
    <string name="barcode_print">Print Barcode</string>
    <string name="receipt_print">Print Tickets</string>
    <string name="battery_test">Battery Jump Test</string>
    <string name="font_test">Font Effect</string>
    <string name="print_performence">距离%.2f mm, 耗时%.2f s, 速度%.2f mm/s</string>
    <string name="statistics_of_dot">点行统计</string>
    <string name="content_density">印字率</string>
    <string name="height_factor">高度( x 48mm)</string>
    <string name="batt_level_skip_error">"Wrong! Power jump, current power%d%%，Last power%d%%"</string>
    <string name="batt_level_test_sleep">"Do not print the next time in %d minutes"</string>
    <string name="device_not_connect">device not connect</string>
    <string name="end_transaction">ICC transaction end</string>
    <string name="select_app_start">please select app</string>
    <string name="select_app_end">select app end, position = </string>
    <string name="emv_configured">emv is configured</string>
    <string name="emv_not_configured">emv is not configured</string>
    <string name="communicate_test">Communication Command Test</string>
    <string name="result">Result is :</string>
    <string name="test_led">LED Test</string>
    <string name="test_led_start">LED Test Start</string>
    <string name="test_led_end">LED Test End</string>
    <string name="test_led_red">Red LED Test</string>
    <string name="test_led_yel">Yellow LED Test</string>
    <string name="test_led_blu">Blue LED Test</string>
    <string name="test_led_green">Green LED Test</string>
    <string name="test_buzzer_start">Buzzer Test Start</string>
    <string name="test_buzzer_end">Buzzer Test End</string>
    <string name="icc_test">ICC Test</string>
    <string name="mcr_test">MCR Test</string>
    <string name="nfc_test">NFC Test</string>
    <string name="psam_test">PSAM Test</string>
    <string name="hardware_check">POS Self Test</string>
    <string name="get_version">Get Version</string>
    <string name="msg_pls_insert_card">Please insert card</string>
    <string name="msg_pls_swipe_card">Please swipe card</string>
    <string name="msg_pls_tap_card">Please tap card</string>
    <string name="test_command">Communication Test Command</string>
    <string name="msg_select_device">Click here to scan and connect device</string>
    <string name="msg_do_trade">Click here to start do trade after finish connected</string>
    <string name="msg_disconnect">Click here to disConnected device</string>
    <string name="msg_conn_usb">Click here to find and connect usb</string>
    <string name="device_info">Device Info</string>
    <string name="device_update">Device Update</string>
    <string name="device_operate">Device Operate</string>
    <string name="device_other">Other</string>
    <string name="title_audio">Audio</string>
    <string name="title_print">Print</string>
    <string name="mp_text_print">Print Text</string>
    <string name="mp_barcode_print">Print BarCode</string>
    <string name="mp_image_print">Print image</string>
    <string name="mp_qrcode_print">Print QRCode</string>
    <string name="mp_tickets_print">Print Tickets</string>
    <string name="mp_standard_print">Standard Print Test</string>
    <string name="mp_battery_test">Battery  Test</string>
    <string name="mp_font_test">Font  Test</string>
    <string name="title_uart">Uart</string>
    <string name="title_blu">Bluetooth</string>
    <string name="title_ble">Ble Bluetooth</string>
    <string name="title_welcome">Dspread Pos</string>
    <string name="msg_allowed_location_permission">Location permission is on</string>
    <string name="msg_not_allowed_loaction_permission">Location permission is forbidden, related map functions are not available</string>
    <string name="refreshing">Refreshing</string>
    <string name="audio_open">audio control:open</string>
    <string name="audio_close">audio control:close</string>
    <string name="audio_unknow">audio control:unknown</string>
    <string name="get_pin">Get Pin</string>
    <string name="update">update</string>
    <string name="do_tradelog_operation">TradeLog Operation</string>
    <string name="get_update_key">get UpdateKey</string>
    <string name="reset_qpos">qpos reset</string>
    <string name="menu_update">qpos update</string>
    <string name="set_sleepMode_time">set sleep mode time</string>
    <string name="input_pin">Please input pin now</string>
    <string name="swipe_card">Please swipe card now.</string>
    <string name="setBuzzer">setBuzzer</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="getQuickEmvStatus">get Quick Emv Status</string>
    <string name="setQuickEmvStatus">set Quick Emv Status</string>
    <string name="updateEMVByXml">update EMVByXml</string>
    <string name="audio">Audio</string>
    <string name="serial_port">Serial port</string>
    <string name="normal_bluetooth">Normal Blutooth</string>
    <string name="other_blu">BLE Blutooth</string>
    <string name="updateEMV">update EMV</string>
    <string name="updateEMVRID">update EMV RID</string>
    <string name="updateIPEK">update IPEK</string>
    <string name="set_Masterkey">set Masterkey</string>
    <string name="update_WorkKey">update WorkKey</string>
    <string name="serialport">Serial Port</string>
    <string name="mac_error">MAC ERROR</string>
    <string name="cmd_timeout">CMD TIMEOUT</string>
    <string name="pinKsn">pinKsn:</string>
    <string name="trackksn">trackksn:</string>
    <string name="pinBlock">pinBlock:</string>
    <string name="posId">posId:</string>
    <string name="get_pos_id">get PosID</string>
    <string name="operate_mafire">Operate Mafire Cards</string>
    <string name="inject_key_remote">Remote key Loading API</string>
    <string name="getting_pos_id">Getting POS ID…</string>
    <string name="isCardExist">check card in slot</string>
    <string name="card_is_exist">card is exist</string>
    <string name="card_is_not_exist">card is not exist</string>
    <string name="scan_bt_device">scan device</string>
    <string name="scan_usb_device">usb device</string>
    <string name="text_quick_emv">update quick emv config</string>
    <string name="getId">getPosId</string>
    <string name="text_quick_emv_trade">do quick emv transaction</string>
    <string name="poll_card">poll card</string>
    <string name="verify_card">verify card</string>
    <string name="read_card">read card</string>
    <string name="operate_card">operate card</string>
    <string name="write_card">write card</string>
    <string name="transfer_card">Transceive APDU</string>
    <string name="finish_card">finish mafire card</string>
    <string name="please_select_bt_name">select device</string>
    <string name="open_serial_port">open serial port</string>
    <string name="open_audio">open audio</string>
    <string name="scan_bt_pos_error">no paired bluetooth device\nplease pair bluetooth device first</string>
    <string name="connecting_bt_pos">connecting\nPlease wait…</string>
    <string name="waiting_for_card">Please insert/swipe/tap card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again and press check card.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="do_emv_trade_fail">Start EMV failed</string>
    <string name="do_emv_trade_success">Start EMV success</string>
    <string name="app_version">App Version：</string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery ADC: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="enter_pin_try">Please enter PIN (Last %s try)</string>
    <string name="online_process_requested">Online process requested</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="str_printtext">str_printtext</string>
    <string name="str_printimg">print pictures</string>
    <string name="str_printbarcode">BARcode printing </string>
    <string name="str_printqrcode">QRcode printing </string>
    <string name="print_setting">Printer Setting</string>
    <string name="code_transformation">Black Mark</string>
    <string name="sample_text">abcdefghijklmnopqrstuvwxyz\nABCDEFGHIJKLMNOPQRSTUVWXYZ\n12345678901234567890\n打印效果测试打印效果测试\n打印效果测试打印效果测试\n</string>
</resources>