<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
     >

    <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
            >

            <ImageView
                android:id="@+id/textPrint_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/printer" />

            <TextView 
                android:id="@+id/textPrint_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/str_printtext"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imagePrint_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/psam" />

            <TextView 
                android:id="@+id/imagePrint_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/str_printimg"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        
        
    </LinearLayout>
     <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
            >

            <ImageView
                 android:id="@+id/barPrint_image"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/barcode" />

            <TextView 
                android:id="@+id/barPrint_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/str_printbarcode"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/eqPrint_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/qrcode" />

            <TextView 
                android:id="@+id/eqPrint_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/str_printqrcode"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        
        
    </LinearLayout>
     <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout 
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
            >

            <ImageView
                android:id="@+id/setting_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/setting" />

            <TextView 
                android:id="@+id/setting_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/print_setting"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
            >

            <ImageView
                 android:id="@+id/codeChage_image"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/chage" />

            <TextView 
                android:id="@+id/codeChage_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/code_transformation"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        
        
    </LinearLayout>

</LinearLayout>
