<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/align_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/align"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="Alignment" />

                    <Spinner
                        android:id="@+id/sp_alignment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/alignment_array" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gray_level_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/gray_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="GrayLevel" />

                    <Spinner
                        android:id="@+id/sp_grey_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/grey_level_array" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/font_style_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/font_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="FontStyle" />

                    <Spinner
                        android:id="@+id/sp_font_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/font_style_array" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/font_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="Font" />

                    <Spinner
                        android:id="@+id/sp_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/font_array" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/content_density_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="@string/content_density" />

                    <Spinner
                        android:id="@+id/sp_content_density"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/content_density_array" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/height_factor_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="@string/height_factor" />

                    <Spinner
                        android:id="@+id/sp_height_factor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/height_factor_array" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/speed_level_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/speed_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="SpeedLevel" />

                    <Spinner
                        android:id="@+id/sp_speed_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/speed_level_array" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cpu_load_thread"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:minLines="1"
                        android:text="负载线程个数" />

                    <EditText
                        android:id="@+id/et_load_thread_count"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_get_printer_density"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_get_printer_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_get_printer_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_get_printer_voltage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_get_printer_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/ll_continuous_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_contuning_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Continuous Printing" />

                <CheckBox
                    android:id="@+id/cb_need_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pause For One Second"
                    android:visibility="gone" />

            </LinearLayout>


            <CheckBox
                android:id="@+id/cb_line_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Auto Paper Out" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/print"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_print" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>